[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Other/starDiamond.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Other/coinGold.png" type="Texture" id=3]
[ext_resource path="res://Assets/Aliens/alienPink_square.png" type="Texture" id=4]
[ext_resource path="res://UI/EndScreen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Aliens/alienPink_round.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/alien.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=10]
size = 40
outline_size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 48
outline_size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 64
outline_size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 5
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=6]
action = "ui_accept"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="EndScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.0588235, 0.301961, 0.784314 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 117.0
margin_bottom = -789.0

[node name="ScoreContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 630.0
margin_bottom = 105.0
alignment = 1

[node name="StarIcon" type="TextureRect" parent="VBoxContainer/ScoreContainer"]
margin_left = 185.0
margin_right = 290.0
margin_bottom = 105.0
rect_min_size = Vector2( 105, 105 )
texture = ExtResource( 1 )
expand = true

[node name="ScoreLabel" type="Label" parent="VBoxContainer/ScoreContainer"]
margin_left = 294.0
margin_top = 28.0
margin_right = 444.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.34902, 0.619608, 0.701961, 1 )
custom_fonts/font = SubResource( 10 )
text = "99999"
align = 1
valign = 1
uppercase = true

[node name="CoinContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 630.0
margin_bottom = 214.0
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="VBoxContainer/CoinContainer"]
margin_left = 230.0
margin_right = 335.0
margin_bottom = 105.0
rect_min_size = Vector2( 105, 105 )
texture = ExtResource( 3 )
expand = true

[node name="CoinLabel" type="Label" parent="VBoxContainer/CoinContainer"]
margin_left = 339.0
margin_top = 28.0
margin_right = 399.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.34902, 0.619608, 0.701961, 1 )
custom_fonts/font = SubResource( 10 )
text = "99"
align = 1
valign = 1
uppercase = true

[node name="FinalScoreCalc" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -109.0
margin_bottom = -51.0
custom_colors/font_color = Color( 0, 0.505882, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "        Ã—        =  "
align = 1
valign = 1
uppercase = true

[node name="StarIcon" type="TextureRect" parent="FinalScoreCalc"]
margin_left = 141.0
margin_top = -47.0
margin_right = 281.0
margin_bottom = 93.0
texture = ExtResource( 1 )
expand = true

[node name="CoinIcon" type="TextureRect" parent="FinalScoreCalc"]
margin_left = 292.0
margin_top = -47.0
margin_right = 432.0
margin_bottom = 93.0
texture = ExtResource( 3 )
expand = true

[node name="FinalScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0.505882, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "999999"
align = 1
valign = 1
uppercase = true

[node name="RestartButtonLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 195.0
margin_top = 777.0
margin_right = -195.0
margin_bottom = 1026.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Tap




to Restart"
align = 1
valign = 1
uppercase = true

[node name="RestartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 271.0
margin_right = 70.0
margin_bottom = 411.0
rect_min_size = Vector2( 140, 140 )
shortcut = SubResource( 7 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 2.0

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
